--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <center><p><b>Under Construction People!</b></p></center>
+    <p><b>Under Construction People!</b></p>
   </body>
 </html>
