--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div data-role="MobileMenu" class="header-mobile-menu">
               <div class="header-top">
                 <a href="index.html" class="header-navlink3 Large">
-                  Soft UI Design System
+                  Astrea
                 </a>
                 <div data-role="CloseMobileMenu" class="header-close-menu">
                   <svg viewBox="0 0 1024 1024" class="header-icon3">
@@ -131,7 +131,7 @@
           <div class="home-container2">
             <div class="home-card">
               <div class="home-container3">
-                <strong class="home-text1">CooMing soon</strong>
+                <strong class="home-text1">CoMing soon</strong>
               </div>
               <div class="home-container4">
                 <div class="home-container5"></div>
