--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div data-role="Header" class="header-header">
             <nav class="header-nav">
               <div class="header-container1">
-                <a href="index.html" class="header-navlink1">AstreA</a>
+                <a href="index.html" class="header-navlink1">AsTreA</a>
                 <div class="header-menu1">
                   <a href="index.html" class="header-navlink2">Home</a>
                 </div>
@@ -163,7 +163,7 @@
             <div class="footer-container">
               <span class="footer-text1">
                 <fragment class="home-fragment">
-                  <span class="home-text2">AstreA @2025</span>
+                  <span class="home-text2">AsTreA @2025</span>
                 </fragment>
               </span>
             </div>
