--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <div class="header-container1">
                 <a href="index.html" class="header-navlink1">AsTreA</a>
                 <div class="header-menu1">
-                  <a href="index.html" class="header-navlink2">Home</a>
+                  <a href="index.html" class="header-navlink2">HoMe</a>
                 </div>
                 <div class="header-container2">
                   <div class="header-container3">
