Update index.html - Non-selectable

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       }
 
       body {
+        -webkit-user-select: none; /* Chrome, Safari, newer Edge */
+        -moz-user-select: none;    /* Firefox */
+        -ms-user-select: none;     /* Internet Explorer */
+        user-select: none;         /* Standard */        
         font-weight: 400;
         font-style:normal;
         text-decoration: none;
