--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           <div data-role="Header" class="header-header">
             <nav class="header-nav">
               <div class="header-container1">
-                <a href="index.html" class="header-navlink1">AsTreA</a>
+                <a href="" class="header-navlink1">AsTreA</a>
                 <div class="header-menu1">
-                  <a href="index.html" class="header-navlink2">HoMe</a>
+                  <a href="" class="header-navlink2">HoMe</a>
                 </div>
                 <div class="header-container2">
                   <div class="header-container3">
